--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/ssight/free-aud#readme",
   "devDependencies": {
     "@types/node": "^16.0.0"
+  },
+  "dependencies": {
+    "glob": "^7.1.7"
   }
 }
