--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/ssight/free-aud#readme",
   "devDependencies": {
+    "@types/glob": "^7.1.3",
     "@types/node": "^16.0.0"
   },
   "dependencies": {
